Fixed FindBugs issues